1999-02-28  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* Makefile.am (FvwmEvent_SOURCES): Remove Parse.c and Parse.h, 
	use the corresponding functions from libs/ModParse.c.

1999-01-08  Paul D. Smith  <psmith@gnu.org>

	* FvwmEvent.c (main): Remove USE_POSIX/USE_BSD stuff and rely on
	HAVE_SIGACTION to choose between new- and old-style signal
	handling.
	(TerminateHandler): Use the autoconf'd return type for signal
	handlers.

1998-12-17  Dominik Vogt  <dominik_vogt@hp.com>

	* Parse.c (PeekArgument): malloc -> safemalloc

1998-11-24  Paul D. Smith  <psmith@gnu.org>

	* Parse.h (LFindToken):  Remove this macro.  It's not used, and it
	uses a 	non-standard function lfind().  Best to not use it at all.
	(search.h): Removed #include.

Tue Nov 10 22:20:21 1998  DanEspen  <dje@blue>

	* FvwmEvent.c  (config):   Fix logic on  test   for  cmd  needs  a
 	parameter.  Thes test for "table != e" was incorrect.  Only try to
 	strip off trailing newline when there is a newline on the command.
  	It was stripping the  last  character when  commands came in  from
 	FvwmTalk.
