@@ -107,7 +107,7 @@
 #undef M_ERROR /* Solaris fix */
 #endif
 
-#include "Parse.h"
+#include "ModParse.h"
 
 #ifdef DEBUG
 #define INFO(x) fprintf(stderr,x)
