@@ -1,3 +1,8 @@
+1999-03-12  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>
+
+	* Parse.c, Parse.h: removed files from distribution.
+	* FvwmEvent.c: change include Parse.h to ModParse.h (in libs).
+
 1999-02-28  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>
 
 	* Makefile.am (FvwmEvent_SOURCES): Remove Parse.c and Parse.h, 
